osd: Remove aios_size argument from submit_batch Due to aios_size being a uint16 and the source value for the actual call being an int there was a possible overflow. This was "fixed" with an assert, however that still causes a crash.

This commit removes the need for aios_size completely by iterating
over the list and submitting it in max_iodepth batches.

Fixes: https://tracker.ceph.com/issues/46366
Signed-off-by: Robin Geuze <robin.geuze@nl.team.blue>
(cherry picked from commit f87db49b0013088f1c87802886c4c16ce47c5cc2)
(cherry picked from commit 7b52409ed70a0c9e382a0fc76a1d7a508aeaf27d)